# embedded-cpp

./: .gitignore
baremetal_intro/: start_gdb  start_openocd
baremetal_intro/001_desktop/: CMakeLists.txt  main.c
baremetal_intro/001_toolchain/: CMakeLists.txt  Makefile
baremetal_intro/002_stm32f4/: Makefile  console.c  main.c  stm32f4discovery.ld
baremetal_intro/003_cmake/: CMakeLists.txt  console.c  console.h  main.c  stm32f4discovery.ld  syscalls.c
baremetal_intro/003_cmake/lib/: CMakeLists.txt
baremetal_intro/004_printf/: CMakeLists.txt  main.c
lib/stm32f4/: CMakeLists.txt
stm32f4-discovery/: Makefile  start_gdb  start_openocd
stm32f4-discovery/001-intro/: Makefile  console.h  main.c  start_gdb  start_openocd  stm32f4_discovery.gdbinit
stm32f4-discovery/lib/CMSIS/: stm32f4xx.h
